Test_Files/abstract_vm/Error/noexit.asm
;     No Exit
;   ============
;   Error test 1

push int8(15)
pop
push int16(-27)
pop
dump
